Added jwt configuration properties and JwtProperties config class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ quarkus.datasource.db-kind = postgresql
 #quarkus.datasource.password =
 #quarkus.datasource.jdbc.url =
 quarkus.hibernate-orm.database.generation=update
+mp.jwt.verify.publickey.location=META-INF/resources/publicKey.pem
+mp.jwt.verify.issuer=https://mazurkiewicz.dev/m2counter
+smallrye.jwt.sign.key-location=META-INF/resources/privateKey.pem
+jwt.token-prefix=Bearer
+jwt.token-expiration=30000
+jwt.issuer=https://mazurkiewicz.dev/m2counter
