Renamed jwt properties and added refresh token properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ quarkus.hibernate-orm.database.generation=update
 mp.jwt.verify.publickey.location=META-INF/resources/publicKey.pem
 mp.jwt.verify.issuer=https://mazurkiewicz.dev/m2counter
 smallrye.jwt.sign.key-location=META-INF/resources/privateKey.pem
-jwt.token-prefix=Bearer
-jwt.token-expiration=30000
-jwt.issuer=https://mazurkiewicz.dev/m2counter
+token.jwt.prefix=Bearer
+token.jwt.expiration=30000
+token.jwt.issuer=https://mazurkiewicz.dev/m2counter
+token.refresh.name=refresh_token
+token.refresh.expiration=3600
