Added @UniqueMail annotation to validate that the entered email at registration is in use

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
 dev.mazurkiewicz.user.validation.PasswordMatch.message=The passwords must be the same
+dev.mazurkiewicz.user.validation.UniqueMail.message=Mail is already in database
